--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ header{
 	background-color: #000;
 	height: 70px;
 	padding-top: 10px;
+	border-botton: 2px solid #696969;
 }
 .menu ul li:hover a{
 	color: #fff;
