--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ header{
 	background-color: #000;
 	height: 70px;
 	padding-top: 10px;
-	border-botton: 2px solid #696969;
 }
 .menu ul li:hover a{
 	color: #fff;
@@ -76,6 +75,9 @@ header{
 	display: flex;
 	justify-content: center;
 	align-content: center;
+}
+.sobre:hover,.servicos:hover,.produtos:hover,.contato:hover{
+	border-bottom: 2px solid #696969;
 }
 .cont01{
 	max-width: 900px;
@@ -233,7 +235,7 @@ color: #696969;
 	margin-bottom: 5px;
 }
 textarea{
-	width: 70%;
+	width: 85%;
 	height: 200px;
 }
 .formulario input[type="submit"]{
